--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,6 +1,4 @@
 .page {
-    min-width: 1280px;
-    min-height: 6875px;
     margin: 0 auto;
     font-family: 'Inter', Arial, sans-serif;
     -moz-osx-font-smoothing: grayscale;
@@ -9,4 +7,22 @@
     -ms-text-size-adjust: 100%;
     -moz-text-size-adjust: 100%;
     background: #2A2C2F;
+}
+
+@media screen and (max-width: 1024px) {
+    .page {
+        width: 1024px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .page {
+        width: 768px;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .page {
+        width: 320px;
+    }
 }
