--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -11,7 +11,8 @@
 @media screen and (max-width: 1024px) {
     .photo-grid {
         width: 928px;
-        height: 942px;
+        height: 100%;
+        /*height: 942px;*/
         grid-template-columns: repeat(3, 1fr);
         grid-template-rows: repeat(4, 1fr);
         gap: 14px;
@@ -21,7 +22,8 @@
 @media screen and (max-width: 768px) {
     .photo-grid {
         width: 720px;
-        height: 1664px;
+        height: 100%;
+        /*height: 1664px;*/
         margin: 88px auto 0;
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: repeat(6, 1fr);
@@ -32,7 +34,8 @@
 @media screen and (max-width: 320px) {
     .photo-grid {
         width: 288px;
-        height: 2724px;
+        height: 100%;
+        /*height: 2724px;*/
         margin: 64px auto 0;
         grid-template-columns: repeat(1, 1fr);
         grid-template-rows: repeat(12, 1fr);
