--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -26,7 +26,7 @@
 
 @media screen and (max-width: 320px) {
     .cover__title {
-        width: 288px;
+        max-width: 288px;
         height: 70px;
         margin: 33px auto 0;
         font-size: 32px;
