--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,6 +1,6 @@
 .intro {
-    min-width: 690px;
-    min-height: 429px;
+    width: 690px;
+    height: 429px;
     margin: 92px 442px 0 148px;
     display: flex;
     flex-direction: column;
@@ -10,8 +10,7 @@
     .intro {
         width: 690px;
         height: 429px;
-        margin: 92px;
-        padding-left: 90px;
+        margin: 92px 286px 0 48px;
     }
 }
 
@@ -19,7 +18,6 @@
     .intro {
         width: 720px;
         margin: 88px auto 0;
-        padding: 0; 
     }
 }
 
