--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -28,9 +28,9 @@
 
 @media screen and (max-width: 320px) {
     .place__paragraph {
-        max-width: 288px;
+        width: 288px;
         font-size: 16px;
-        margin: 25px 0 0;
+        margin: 25px 16px 0;
     }
 
     .place__paragraph:first-of-type {
