--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -18,6 +18,6 @@
 @media screen and (max-width: 320px) {
     .place__website {
         width: 288px;
-        margin-top: 32px;
+        margin: 32px 16px 0;
     }
 }
