--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -4,9 +4,18 @@
     font-style: normal;
     font-weight: 400;
     font-size: 30px;
-    line-height: 1.2;
+    line-height: 36px;
     text-align: center;
-    color: #FFFFFF; 
+    color: #FFFFFF;
+}
+
+@media screen and (min-width: 321px) and (max-width: 767px) {
+    .lead__subtitle {
+        max-width: calc(288px + (640 - 288) * (100vw - 320px) / (768 - 320));
+        margin-top: calc(16px + (32 - 16) * (100vw - 320px) / (768 - 320));
+        font-size: calc(16px + (30 - 16) * (100vw - 320px) / (768 - 320));
+        line-height: calc(20px + (36 - 20) * (100vw - 320px) / (768 - 320));
+    }
 }
 
 @media screen and (max-width: 320px) {
@@ -14,6 +23,6 @@
         max-width: 288px;
         margin: 16px auto 0;
         font-size: 16px;
-        line-height: 1.25;
+        line-height: 20px;
     }
 }
