--- a/blocks/cover/__background/cover__background.css
+++ b/blocks/cover/__background/cover__background.css
@@ -1,8 +1,30 @@
 .cover__background {
-    width: 100%;
-    height: 100%;
-    margin: 0;
+    max-width: 1184px;
+    max-height: 740px;
+    margin: 0 auto 0;
     object-fit: cover;
     position: absolute;
     z-index: 0;
+}
+
+@media screen and (max-width: 1024px) {
+    .cover__background {
+        max-width: 1024px;
+        max-height: 640px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .cover__background {
+        max-width: 768px;
+        max-height: 480px;
+        margin: 0;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .cover__background {
+        max-width: 320px;
+        max-height: 200px;
+    }
 }
