--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,6 +1,5 @@
 .cover__title {
-    width: 560px;
-    height: 152px;
+    max-width: 560px;
     margin: 245px auto 0;
     font-style: normal;
     font-weight: 900;
@@ -12,9 +11,19 @@
     z-index: 3;
 }
 
+.cover__title:hover~.cover__overlay {
+    opacity: 0.8;
+}
+
 @media screen and (max-width: 1024px) {
     .cover__title {
         margin: 195px auto 0;
+    }
+}
+
+@media screen and (min-width: 769px) and (max-width: 1023px) {
+    .cover__title {
+        margin-top: calc(115px + (195 - 115) * (100vw - 768px) / (1024 - 768));
     }
 }
 
@@ -24,11 +33,19 @@
     }
 }
 
+@media screen and (min-width: 321px) and (max-width: 767px) {
+    .cover__title {
+        max-width: calc(250px + (560 - 250) * (100vw - 320px) / (768 - 320));
+        margin-top: calc(33px + (115 - 33) * (100vw - 320px) / (768 - 320));
+        font-size: calc(32px + (72 - 32) * (100vw - 320px) / (768 - 320));
+        line-height: calc(35px + (76 - 35) * (100vw - 320px) / (768 - 320));
+    }
+}
+
 @media screen and (max-width: 320px) {
     .cover__title {
-        max-width: 288px;
-        height: 70px;
-        margin: 33px auto 0;
+        max-width: 250px;
+        margin-top: 33px;
         font-size: 32px;
         line-height: 35px;
     }
