--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,7 +1,7 @@
 .footer__copyright {
     width: 186px;
     height: 16px;
-    margin: 0;
+    margin: 2px 0 0;
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
@@ -10,10 +10,10 @@
     color: #FFFFFF;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 700px) {
     .footer__copyright {
-        height: 14px;
-        font-size: 14px;
+        margin-top: 0;
         line-height: 14px;
+        text-align: left;
     }
 }
