--- a/blocks/footer/__link-list/footer__link-list.css
+++ b/blocks/footer/__link-list/footer__link-list.css
@@ -1,14 +1,14 @@
 .footer__link-list {
     display: flex;
     flex-direction: row;
-    flex-wrap: wrap;
     justify-content: flex-start;
+    column-gap: 18px;
     list-style: none;
     margin: 0;
     padding: 0;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 700px) {
     .footer__link-list {
         flex-direction: column;
         row-gap: 32px;
