--- a/blocks/header/__lang-link/_active/header__lang-link_active.css
+++ b/blocks/header/__lang-link/_active/header__lang-link_active.css
@@ -8,6 +8,13 @@
     opacity: 0.8;
 }
 
+@media screen and (min-width: 321px) and (max-width: 767px) {
+    .header__lang-link_active {
+        width: calc(22px + (30 - 22) * (100vw - 320px) / (768 - 320));
+        height: calc(20px + (28 - 20) * (100vw - 320px) / (768 - 320));
+    }
+}
+
 @media screen and (max-width: 320px) {
     .header__lang-link_active {
         width: 22px;
