--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,30 +1,34 @@
 .intro {
-    width: 690px;
-    height: 429px;
+    max-width: 690px;
     margin: 92px 442px 0 148px;
     display: flex;
     flex-direction: column;
 }
 
+@media screen and (max-width: 1184px) {
+    .intro {
+        max-width: 690px;
+        margin: 92px 394px 0 100px;
+    }
+}
+
 @media screen and (max-width: 1024px) {
     .intro {
-        width: 690px;
-        height: 429px;
+        max-width: 690px;
         margin: 92px 286px 0 48px;
     }
 }
 
 @media screen and (max-width: 768px) {
     .intro {
-        width: 720px;
+        max-width: 93.75%;
         margin: 88px auto 0;
     }
 }
 
 @media screen and (max-width: 320px) {
     .intro {
-        width: 288px;
-        height: 754px;
-        margin: 64px auto 0;
+        max-width: 288px;
+        margin-top: 64px;
     }
 }
