--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,29 +1,34 @@
 .lead__image {
-    width: 984px;
-    height: 615px;
-    margin: 64px auto 0;
+    max-width: 984px;
+    max-height: 615px;
+    margin: 64px 0 0;
 }
 
 @media screen and (max-width: 1024px) {
     .lead__image {
-        width: 928px;
-        height: 580px;
-        margin: 56px auto 0;
+        max-width: 928px;
+        max-height: 580px;
+        margin-top: 56px;
     }
 }
 
 @media screen and (max-width: 768px) {
     .lead__image {
-        width: 768px;
-        height: 480px;
-        margin: 56px auto 0;
+        max-width: 768px;
+        max-height: 480px;
+    }
+}
+
+@media screen and (min-width: 321px) and (max-width: 767px) {
+    .lead__image {
+        margin-top: calc(40px + (56 - 40) * (100vw - 320px) / (768 - 320));
     }
 }
 
 @media screen and (max-width: 320px) {
     .lead__image {
-        width: 320px;
-        height: 200px;
-        margin: 40px auto 0;
+        max-width: 320px;
+        max-height: 200px;
+        margin-top: 40px;
     }
 }
