--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -9,6 +9,14 @@
     color: #FFFFFF;
 }
 
+@media screen and (min-width: 321px) and (max-width: 767px) {
+    .lead__title {
+        max-width: calc(288px + (720 - 288) * (100vw - 320px) / (768 - 320));
+        font-size: calc(40px + (96 - 40) * (100vw - 320px) / (768 - 320));
+        line-height: calc(44px + (100 - 44) * (100vw - 320px) / (768 - 320));
+    }
+}
+
 @media screen and (max-width: 320px) {
     .lead__title {
         max-width: 288px;
