--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,31 +1,27 @@
 .lead {
-    width: 984px;
-    height: 1005px;
+    max-width: 984px;
     margin: 56px auto 0;
     display: flex;
     flex-direction: column;
+    justify-content: center;
 }
 
 @media screen and (max-width: 1024px) {
     .lead {
-        width: 928px;
-        height: 962px;
+        max-width: 928px;
         margin: 48px auto 0;
     }
 }
 
 @media screen and (max-width: 768px) {
     .lead {
-        width: 768px;
-        height: 862px;
+        max-width: 768px;
         margin: 48px auto 0;
     }
 }
 
 @media screen and (max-width: 320px) {
     .lead {
-        width: 320px;
-        height: 406px;
-        margin: 48px auto 0;
+        max-width: 320px;
     }
 }
