--- a/blocks/photo-grid/__item/photo-grid__item.css
+++ b/blocks/photo-grid/__item/photo-grid__item.css
@@ -1,25 +1,43 @@
 .photo-grid__item {
-    width: 284px;
-    height: 213px;
+    max-width: 284px;
+    max-height: 213px;
+}
+
+@media screen and (min-width: 1025px) and (max-width: 1279px) {
+    .photo-grid__item {
+        width: 100%;
+    }
 }
 
 @media screen and (max-width: 1024px) {
     .photo-grid__item {
-        width: 300px;
-        height: 225px;
+        max-width: 300px;
+        max-height: 225px;
+    }
+}
+
+@media screen and (min-width: 769px) and (max-width: 1023px) {
+    .photo-grid__item {
+        width: 100%;
     }
 }
 
 @media screen and (max-width: 768px) {
     .photo-grid__item {
-        width: 352px;
-        height: 264px;
+        max-width: 352px;
+        max-height: 264px;
+    }
+}
+
+@media screen and (min-width: 321px) and (max-width: 767px) {
+    .photo-grid__item {
+        width: 100%;
     }
 }
 
 @media screen and (max-width: 320px) {
     .photo-grid__item {
-        width: 288px;
-        height: 216px;
+        max-width: 288px;
+        max-height: 216px;
     }
 }
