--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,27 +1,34 @@
 .place__image {
-    width: 460px;
-    height: 460px;
+    max-width: 460px;
+    max-width: 460px;
     margin: 48px 0 0;
 }
 
 @media screen and (max-width: 1024px) {
     .place__image {
-        width: 440px;
-        height: 440px;
+        max-width: 440px;
+        max-height: 440px;
     }
 }
 
 @media screen and (max-width: 768px) {
     .place__image {
-        width: 340px;
-        height: 340px;
+        max-width: 340px;
+        max-height: 340px;
+    }
+}
+
+@media screen and (min-width: 321px) and (max-width: 767px) {
+    .place__image {
+        width: 100%;
+        margin: calc(32px + (48 - 32) * (100vw - 320px) / (768 - 320)) auto 0;
     }
 }
 
 @media screen and (max-width: 320px) {
     .place__image {
-        width: 320px;
-        height: 320px;
+        max-width: 320px;
+        max-height: 320px;
         margin: 32px 0 0;
     }
 }
