--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -1,7 +1,6 @@
 .place__link {
-    width: 456px;
-    height: 22px;
-    margin: 12px auto 0;
+    max-width: 456px;
+    margin: 0;
     font-style: normal;
     font-weight: 400;
     font-size: 18px;
@@ -17,12 +16,12 @@
 
 @media screen and (max-width: 768px) {
     .place__link {
-        width: 352px;
+        max-width: 352px;
     }
 }
 
 @media screen and (max-width: 320px) {
     .place__link {
-        width: 288px;
+        max-width: 288px;
     }
 }
