--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -6,6 +6,7 @@
     font-size: 18px;
     line-height: 163%;
     color: #FFFFFF;
+    padding: 0;
 }
 
 .place__paragraph:first-of-type {
@@ -26,14 +27,25 @@
     }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (min-width: 321px) and (max-width: 767px) {
+    .place__paragraph:first-of-type {
+        margin-top: calc(32px + (48 - 32) * (100vw - 320px) / (768 - 320));
+    }
+}
+
+@media screen and (max-width: 499px) {
     .place__paragraph {
-        width: 288px;
-        font-size: 16px;
-        margin: 25px 16px 0;
+        width: 90%;
+        margin: 25px auto 0;
     }
 
     .place__paragraph:first-of-type {
         margin-top: 32px;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .place__paragraph {
+        max-width: 288px;
     }
 }
