--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -10,21 +10,43 @@
 
 @media screen and (max-width: 1024px) {
     .place__title {
-        width: 440px;
+        max-width: 440px;
     }
 }
 
 @media screen and (max-width: 768px) {
     .place__title {
-        width: 340px;
+        max-width: 340px;
         font-size: 42px;
-        line-height: 1.1;
+        line-height: 46px;
+    }
+}
+
+@media screen and (min-width: 500px) and (max-width: 767px) {
+    .place__title {
+        max-width: calc((100% - 28px) / 2);
+    }
+}
+
+
+@media screen and (max-width: 499px) {
+    .place__title {
+        max-width: 352px;
+        margin: 0 auto 0;
+    }
+}
+
+@media screen and (min-width: 321px) and (max-width: 498px) {
+    .place__title {
+        max-width: calc(288px + (352 - 288) * (100vw - 320px) / (499 - 320));
+        font-size: calc(32px + (42 - 32) * (100vw - 320px) / (499 - 320));
+        line-height: calc(35px + (46 - 35) * (100vw - 320px) / (499 - 320));
     }
 }
 
 @media screen and (max-width: 320px) {
     .place__title {
-        width: 288px;
+        max-width: 288px;
         margin: 0 16px 0;
         font-size: 32px;
         line-height: 35px;
