--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -1,7 +1,6 @@
 .place__url-heading {
-    width: 456px;
-    height: 12px;
-    margin: 0 auto 0;
+    max-width: 456px;
+    margin: 0;
     font-style: normal;
     font-weight: 400;
     font-size: 12px;
@@ -12,12 +11,12 @@
 
 @media screen and (max-width: 768px) {
     .place__url-heading {
-        width: 352px;
+        max-width: 352px;
     }
 }
 
 @media screen and (max-width: 320px) {
     .place__url-heading {
-        width: 288px;
+        max-width: 288px;
     }
 }
