--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,5 +1,5 @@
 .places {
-    width: 984px;
+    max-width: 984px;
     margin: 92px auto 0;
     display: flex;
     flex-direction: column;
@@ -7,20 +7,27 @@
 
 @media screen and (max-width: 1024px) {
     .places {
-        width: 928px;
+        max-width: 928px;
     }
 }
 
 @media screen and (max-width: 768px) {
     .places {
-        width: 720px;
-        margin: 88px auto 0;
+        max-width: 720px;
+        margin-top: 88px;
+    }
+}
+
+@media screen and (min-width: 321px) and (max-width: 767px) {
+    .places {
+        max-width: calc(320px + (720 - 320) * (100vw - 320px) / (768 - 320));
+        margin-top: calc(64px + (88 - 64) * (100vw - 320px) / (768 - 320));
     }
 }
 
 @media screen and (max-width: 320px) {
     .places {
-        width: 320px;
-        margin: 64px auto 0;
+        max-width: 320px;
+        margin-top: 64px;
     }
 }
