--- a/blocks/two-columns/__info/two-columns__info.css
+++ b/blocks/two-columns/__info/two-columns__info.css
@@ -3,3 +3,9 @@
     flex-direction: column;
     justify-content: start;
 }
+
+@media screen and (min-width: 500px) and (max-width: 767px) {
+    .two-columns__info {
+        width: 50%;
+    }
+}
