--- a/blocks/two-columns/two-columns.css
+++ b/blocks/two-columns/two-columns.css
@@ -1,12 +1,20 @@
 .two-columns {
-    width: 100%;
     display: flex;
+    flex-direction: row;
+    justify-content: start;
     column-gap: 40px;
+    margin: 0;
 }
 
 @media screen and (max-width: 1024px) {
     .two-columns {
         column-gap: 32px;
+    }
+}
+
+@media screen and (min-width: 769px) and (max-width: 1023px) {
+    .two-columns {
+        column-gap: calc(28px + (32 - 28) * (100vw - 768px) / (1024 - 768));
     }
 }
 
@@ -16,10 +24,8 @@
     }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 499px) {
     .two-columns {
         flex-direction: column;
-        justify-content: start;
-        flex-wrap: wrap;
     }
 }
