--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -11,7 +11,8 @@
 @media screen and (max-width: 768px) {
     .intro__text {
         max-width: 720px;
-        margin: 40px auto 0;
+        margin-left: auto;
+        margin-right: auto;
     }
 }
 
