--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -5,17 +5,23 @@
     flex-direction: column;
 }
 
+@media screen and (min-width: 1280px) {
+    .intro {
+        margin-left: calc((100vw - 984px) / 2);
+    }
+}
+
 @media screen and (max-width: 1184px) {
     .intro {
-        max-width: 690px;
-        margin: 92px 394px 0 100px;
+        margin-left: 100px;
+        margin-right: 394px;
     }
 }
 
 @media screen and (max-width: 1024px) {
     .intro {
-        max-width: 690px;
-        margin: 92px 286px 0 48px;
+        margin-left: 48px;
+        margin-right: 286px;
     }
 }
 
