--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -9,14 +9,13 @@
 @media screen and (max-width: 1024px) {
     .lead {
         max-width: 928px;
-        margin: 48px auto 0;
+        margin-top: 48px;
     }
 }
 
 @media screen and (max-width: 768px) {
     .lead {
         max-width: 768px;
-        margin: 48px auto 0;
     }
 }
 
