--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -11,6 +11,13 @@
     }
 }
 
+@media screen and (min-width: 769px) and (max-width: 1023px) {
+    .place__image {
+        width: calc((100% - 32px) / 2);
+        height: 100%;
+    }
+}
+
 @media screen and (max-width: 768px) {
     .place__image {
         max-width: 340px;
@@ -18,10 +25,17 @@
     }
 }
 
-@media screen and (min-width: 321px) and (max-width: 767px) {
+@media screen and (min-width: 500px) and (max-width: 767px) {
+    .place__image {
+        width: calc((100% - 28px) / 2);
+        height: 100%;
+    }
+}
+
+@media screen and (min-width: 321px) and (max-width: 499px) {
     .place__image {
         width: 100%;
-        margin: calc(32px + (48 - 32) * (100vw - 320px) / (768 - 320)) auto 0;
+        margin: calc(32px + (48 - 32) * (100vw - 320px) / (499 - 320)) auto 0;
     }
 }
 
