--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -15,7 +15,7 @@
 
 @media screen and (max-width: 1024px) {
     .place__paragraph {
-        max-width: 456px; 
+        max-width: 456px;
     }
 }
 
@@ -23,7 +23,7 @@
     .place__paragraph {
         max-width: 352px;
         font-size: 16px;
-        margin: 25px 0 0;
+        margin-top: 25px;
     }
 }
 
@@ -36,7 +36,8 @@
 @media screen and (max-width: 499px) {
     .place__paragraph {
         width: 90%;
-        margin: 25px auto 0;
+        margin-left: auto;
+        margin-right: auto;
     }
 
     .place__paragraph:first-of-type {
