--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,16 +1,32 @@
 .place {
     display: flex;
     margin-top: 80px;
-    flex-direction: column;
+    margin-bottom: 0;
+    flex-direction: row;
+    flex-wrap: wrap;
+    column-gap: 40px;
 }
 
 .place:first-of-type {
     margin-top: 0;
 }
 
+@media screen and (max-width: 1024px) {
+    .place {
+        column-gap: 32px;
+    }
+}
+
+@media screen and (min-width: 769px) and (max-width: 1023px) {
+    .place {
+        column-gap: calc(28px + (32 - 28) * (100vw - 768px) / (1024 - 768));
+    }
+}
+
 @media screen and (max-width: 768px) {
     .place {
         margin-top: 73px;
+        column-gap: 28px;
     }
 }
 
@@ -20,8 +36,15 @@
     }
 }
 
+@media screen and (max-width: 499px) {
+    .place {
+        flex-direction: column;
+    }
+}
+
 @media screen and (max-width: 320px) {
     .place {
         margin-top: 50px;
+        column-gap: 0;
     }
 }
