--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -3,6 +3,7 @@
     margin: 92px auto 0;
     display: flex;
     flex-direction: column;
+    justify-content: center;
 }
 
 @media screen and (max-width: 1024px) {
