--- a/blocks/cover/__background/cover__background.css
+++ b/blocks/cover/__background/cover__background.css
@@ -1,52 +1,12 @@
 .cover__background {
-    max-width: 1184px;
-    min-height: 740px;
+    width: 100%;
+    height: 100%;
     margin: 0 auto 0;
     padding: 0;
+    top: 0;
+    left: 0;
     object-fit: cover;
+    object-position: top left;
     position: absolute;
     z-index: 0;
-}
-
-@media screen and (min-width: 1025px) and (max-width: 1279px) {
-    .cover__background {
-        max-width: calc(1024px + (1184 - 1024) * (100vw - 1024px) / (1280 - 1024));
-        min-height: calc(640px + (740 - 640) * (100vw - 1024px) / (1280 - 1024));
-    }
-}
-
-@media screen and (max-width: 1024px) {
-    .cover__background {
-        max-width: 1024px;
-        min-height: 640px;
-    }
-}
-
-@media screen and (min-width: 769px) and (max-width: 1023px) {
-    .cover__background {
-        max-width: calc(768px + (1024 - 768) * (100vw - 768px) / (1024 - 768));
-        min-height: calc(480px + (640 - 480) * (100vw - 768px) / (1024 - 768));
-    }
-}
-
-@media screen and (max-width: 768px) {
-    .cover__background {
-        max-width: 768px;
-        min-height: 480px;
-        margin: 0;
-    }
-}
-
-@media screen and (min-width: 321px) and (max-width: 767px) {
-    .cover__background {
-        max-width: calc(320px + (768 - 320) * (100vw - 320px) / (768 - 320));
-        min-height: calc(200px + (480 - 200) * (100vw - 320px) / (768 - 320));
-    }
-}
-
-@media screen and (max-width: 320px) {
-    .cover__background {
-        max-width: 320px;
-        min-height: 200px;
-    }
 }
