--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -15,6 +15,8 @@
     position: absolute;
     top: 0;
     left: 0;
+    right: 100%;
+    bottom: 100%;
     width: 100%;
     height: 100%;
     background: #2A2C2F;
