--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -8,6 +8,10 @@
     text-decoration-line: none;
 }
 
+.header__lang-link:hover {
+    opacity: 0.8;
+}
+
 @media screen and (max-width: 320px) {
     .header__lang-link {
         font-size: 18px;
