--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -1,6 +1,8 @@
 .intro__list {
     max-width: 690px;
     margin: 33px 0 0;
+    list-style: none;
+    padding: 0;
 }
 
 @media screen and (max-width: 768px) {
